# cms-backend/src/core/entities/Client.ts
@@ -4,6 +4,8 @@ export class Client {
     public name: string,
     public email: string,
     public phone: string,
+    public latitude?: number,
+    public longitude?: number
   ) { }
 }
 
